--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Blessing Manjozi <manjozib@gmail.com>
+Takudzwa Michael Tsuro <michaeltsuro@gmail.com>
